--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
     <h1>Hello World</h1>
     <p>I'm hosted by GitHub Pages</p>
+
+    <h2>Affiliate Test zone</h2>
+    <a>http://nespresso.krd/index.php?route=product/product&product_id=54&tracking=xPlGH49xaya01REI5tXy4sVQmAiKp6RhBjQkFk3FsVm3QaAAGIYie39IpOFzsJh6</a>
 </body>
 </html>
