--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <p>I'm hosted by GitHub Pages</p>
 
     <h2>Affiliate Test zone</h2>
-    <a>http://nespresso.krd/index.php?route=product/product&product_id=54&tracking=xPlGH49xaya01REI5tXy4sVQmAiKp6RhBjQkFk3FsVm3QaAAGIYie39IpOFzsJh6</a>
+    <a href="http://nespresso.krd/index.php?route=product/product&product_id=54&tracking=xPlGH49xaya01REI5tXy4sVQmAiKp6RhBjQkFk3FsVm3QaAAGIYie39IpOFzsJh6">Caramelito Pod</a>
 </body>
 </html>
